styleui):restyled the nav component with correct spacing between the components

--- a/src/pages/about/components/developerDetails/style.css
+++ b/src/pages/about/components/developerDetails/style.css
@@ -7,13 +7,20 @@
   top: 50%;
   bottom: 50%;
 }
+
+.dd-main-container {
+  display: flex;
+  justify-content: center;
+}
+
 .developer-details-component {
   margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
 }
+
 .developer-details-outer-container {
   width: 40vw;
   height: auto;
@@ -21,18 +28,21 @@
   border-radius: 1vh;
   margin: 1%;
 }
+
 .developer-details-inner-container {
   padding: 2% 4%;
 }
+
 .developer-details-name {
   font-family: "Poppins", "Helvetica Neue", Helvetica, Arial;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 4.5vh;
+  font-size: 2rem;
   margin: 0;
 }
+
 .developer-details-role {
   padding: 0;
   margin: 0;
@@ -40,21 +50,22 @@
   font-weight: 500;
   font-style: normal;
   color: white;
-  font-size: 3vh;
+  font-size: 1.75rem;
 }
+
 .developer-details-role-circle {
   padding: 0 0.5vw;
   font-size: 2.2vh;
   color: black;
 }
+
 .developer-details-skills {
   /* min-width: 3.5vw; */
   height: auto;
   background-color: rgba(30, 30, 30, 0.77);
   color: white;
-  padding: 1vh 3vh;
+  padding: 0.5vh 1vw;
   text-align: center;
-  font-size: 2vh;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
@@ -62,15 +73,17 @@
   margin-right: 1vw;
   margin-bottom: 1.5vh;
 }
+
 .developer-details-skills-container {
-  margin-top: 2vh;
   display: flex;
   flex-wrap: wrap;
 }
+
 .developer-details-contact-container {
   margin-top: 1.5vh;
   display: flex;
 }
+
 .developer-details-location {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -79,10 +92,12 @@
   display: flex;
   align-items: center;
 }
+
 .developer-details-location-icon {
   margin-right: 0.6vw;
   font-size: 3.5vh;
 }
+
 .developer-details-mail {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -92,10 +107,12 @@
   align-items: center;
   margin-left: 3vw;
 }
+
 .developer-details-mail-icon {
   margin-right: 0.6vw;
   font-size: 3.5vh;
 }
+
 .developer-details-social-media-container {
   margin-top: 5vh;
   font-size: 4vh;
@@ -152,18 +169,20 @@
 .developer-details-link:hover .hover-text {
   display: block;
 }
+
 .developer-details-image-container {
   width: 19.7vw;
   border-radius: 1vh;
   margin: 1%;
-  background: linear-gradient(90deg, #31acd3, #82e8c3);
   padding: 1.3%;
 }
+
 .developer-details-image {
   width: 19.4vw;
   height: 43vh;
   border-radius: 1vh;
 }
+
 .developer-heading-container {
   position: relative;
   width: 35vw;
@@ -212,7 +231,7 @@
 
 .developer-heading-rectangle {
   width: 65%;
-  height: 65%;
+  height: 45%;
   background: white;
   border-radius: 100px;
   border: 0.6vh solid #61d8ad;
@@ -225,7 +244,7 @@
 
 .developer-heading-text {
   color: #61d8ad;
-  font-size: 5vh;
+  font-size: 2rem;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   word-wrap: break-word;
