--- a/src/pages/about/components/horizontalScroll/style.css
+++ b/src/pages/about/components/horizontalScroll/style.css
@@ -5,12 +5,13 @@
   white-space: nowrap;
   position: relative;
   width: 100%;
+  margin-top: 15vh;
 }
 
 .horizontal-scroll-content {
   display: flex;
   white-space: nowrap;
-  font-size: 2.6vw;
+  font-size: 2rem;
 }
 
 .horizontal-scroll-span-text {
